--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="user1.png">
+                <img src="user2.png">
             </div>
             <div class="about-col-2">
                 <h1 class="subtitle">About Me</h1>
-                <p>Hello, my name is Manyam Chaitanya. I am currently pursuing a Bachelor's degree in Electronics and Communication Engineering. Along with my studies, 
-I have developed skills in programming languages such as Java, Python, HTML, CSS, and basic JavaScript. I have a keen interest in technology and enjoy learning new concepts related to my field of study. 
-Through my academic pursuits and practical experience,I aim to contribute to the development of innovative solutions that address real-world problems.</p>
+                <p>Welcome to my portfolio! I'm Manyam Chaitanya, a dedicated Electronics and Communication Engineering student with a passion for technology and a drive to contribute innovative solutions to real-world challenges. 
+                Currently pursuing my Bachelor's degree, I have honed my skills in various programming languages including Java, Python, HTML, CSS, and  JavaScript.</p>
                     <div class="tabtitles">
                         <p class="tablinks  activelink" onclick="opentab('skills')">Skills</p>
                         <p class="tablinks" onclick="opentab('epxeri')">Experiencne</p>
                         <p class="tablinks " onclick="opentab('Educ')">Education</p>
                     </div>
-                    <div class="tabcontents activetab" id="skills" >
+                    <div class="tabcontents activetab" id="skills">
                         <ul class="skilllogo"> 
                             <li><span>Java</span></li>
                             <li><span>MySQL</span></li>
-                            <li><span>Python (Basics)</span></li>
-                            <li><span>HTML / CSS (Beginner)</span></li>
+                            <li><span>Python</span></li>
+                            <li><span>HTML/CSS </span></li>
                             <li><span>JavaScript</span></li>
+                            <li><span>ReactJs</span></li>
                             <li><span>MongoDB</span></li>
                             <li><span>Graphic Designing</span></li>
                             <li></li>
@@ -59,14 +59,16 @@ Through my academic pursuits and practical experience,I aim to contribute to the
                     </div>
                     <div class="tabcontents" id="epxeri">
                         <ul>
+                            <li><span>January,2023 - February,2023</span><br> API and Frontend Developer at Helix Techin Info System Pvt Ltd </li>
                             <li><span>June,2022 - Present</span><br> Graphic Designer at We Care Social Welfare Society (NGO) </li>
-                            <li><span>December,2021 - Present</span><br> Content Creator On Youtube </li>
+                            <li><span>December,2021 - February,2023</span><br> Content Creator On Youtube </li>
                         </ul>
                     </div>
                     <div class="tabcontents" id="Educ">
                         <ul>
                             <li><span>2020-2024</span><br> B.Tech (Electronics & Communication Engineering) at Lakshmi Narain College of Technology,Bhopal</li>
                             <li><span>2019-2020 </span><br> PCM with Informatics Practices (XII-CBSE) at Shadra Vidya Mandir,Bhopal</li>
+                            <li><span>2017-2018 </span><br> Science (X-CBSE) at Shadra Vidya Mandir,Bhopal</li>
                         </ul>
                     </div>
             </div> 
@@ -82,7 +84,7 @@ Through my academic pursuits and practical experience,I aim to contribute to the
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Designer</h2>
-                <p >I am a beginning web designer who is learning HTML, CSS, and JavaScript while developing frontend designs for websites.</p>
+                <p >A budding web designer passionately exploring the realms of programming languages to craft captivating frontend designs for websites.</p>
             </div>
             <div>
                 <i class="fa-solid fa-code"></i>
@@ -92,7 +94,7 @@ Through my academic pursuits and practical experience,I aim to contribute to the
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Java Developer</h2>
-                <p> As a Java programmer, I'm constantly learning new Java concepts and creating new projects that use SQL databases.</p>
+                <p> A a Java Developer with a passion for crafting robust and efficient software solutions. My journey in the world of programming has been anchored by a strong command of Java and a commitment to creating impactful applications.</p>
             </div>
             
         </div>
@@ -131,33 +133,15 @@ Through my academic pursuits and practical experience,I aim to contribute to the
                 </div>
             </div>
             <div class="work">
-                <img src="work-44.png">
+                <img src="meal_it.png">
                 <div class="layer">
-                    <h3>Calculator</h3>
-                    <p>The calculator design project with HTML, CSS, and JavaScript aims to create a functional calculator interface on a web page. 
-The HTML structure defines the display and buttons of the calculator, while CSS is used to style and layout the elements. </p>
-                    <a href="https://mannyamm21.github.io/Calculator/" target=”_blank”><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Online Food Ordering Web Application</h3>
+                    <p>Online Food Ordering Platform built with MERN stack. Seamlessly browse, order, and track deliveries with user authentication and PayPal integration. 
+                        Responsive design ensures optimal user experience. 
+                        Future plans include personalized recommendations and social media integration.</p>
+                    <a href="https://meal-it-mernstack.onrender.com/" target=”_blank”><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
-            <div class="work">
-                <img src="work-55.png">
-                <div class="layer">
-                    <h3>StopWatch</h3>
-                    <p>The stopwatch project is a web-based application created using HTML, CSS, and JavaScript. 
-It provides a functional stopwatch with buttons to start, pause, and reset the timer.</p>
-                    <a href="https://mannyamm21.github.io/StopWatch/" target=”_blank”><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
-            <div class="work">
-                <img src="work-66.png">
-                <div class="layer">
-                    <h3>Analog Clock</h3>
-                    <p>The analog clock project is a web-based application created using HTML, CSS, and JavaScript.
- It displays a clock with hour, minute, and second hands, mimicking a traditional analog clock</p>
-                    <a href="https://mannyamm21.github.io/Analog-Clock/" target=”_blank”><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
-
+            </div>    
         </div>
     </div>
 </div>
@@ -175,7 +159,7 @@ It provides a functional stopwatch with buttons to start, pause, and reset the t
                     <a  href="https://www.linkedin.com/in/manyam-chaitanya-24715821a/" target=”_blank”><i class="fa-brands fa-linkedin"></i></a>
                     <a  href="https://github.com/mannyamm21" target=”_blank”><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="ManyamChaitanyaResume .pdf" download class="btn btn2">Download CV</a>
+                <a href="MANYAM CHAITANYA  (1) .pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -195,7 +179,6 @@ It provides a functional stopwatch with buttons to start, pause, and reset the t
 </div>
 
 <script>
-
     var tablinks = document.getElementsByClassName("tablinks");
     var tabcontents = document.getElementsByClassName("tabcontents");
     function opentab(tabname){
@@ -223,7 +206,7 @@ It provides a functional stopwatch with buttons to start, pause, and reset the t
 
   
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyP9-IDahaXdqjQnVpoATnObsAf2z-Sk4gIYO5vLkTHTJbklhReoLt7-HYi2i2864qa/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwfueCag75x-LirBMyF0XG6kPlZeWwevK9k_5LxjM0TJWAsGFniHAKjKPOPseX4TcPSEg/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
     form.addEventListener('submit', e => {
@@ -240,6 +223,11 @@ It provides a functional stopwatch with buttons to start, pause, and reset the t
         })
         .catch(error => console.error('Error!', error.message))
     })
+    function toggleOptions(button) {
+    var hiddenOptions = button.nextElementSibling;
+    hiddenOptions.classList.toggle("show-options");
+}
+
 
   </script>
 </body>
